# vjasssdk

./: LICENSE  README
katevjasside/src/: CMakeLists.txt  jasshelperpluginconfigpage.cpp  jasshelperpluginconfigpage.h  katevjasside_automoc.cpp  moc_jasshelperpluginconfigpage.cpp  moc_plugin.cpp  mpqeditordialog.h  plugin.cpp  plugin.h  pluginview.cpp  pluginview.h
mpqeditor/: CMakeLists.txt  ChangeLog  mpqeditor.desktop
mpqeditor/src/: CMakeLists.txt  archivecreationdialog.cpp  archivecreationdialog.h  archiveswidget.cpp  archiveswidget.h  main.cpp  mainwindow.cpp  mainwindow.h  moc_archivecreationdialog.cpp  moc_mainwindow.cpp  mpqeditor_automoc.cpp  ui_archivecreationdialog.h  ui_archiveswidget.h
mpqeditor/src/SFmpq/: SFmpqapi.h  windows.h
mpqeditor/ui/: CMakeLists.txt  CTestTestfile.cmake  Makefile  archivecreationdialog.ui  archiveswidget.ui  cmake_install.cmake
vjassdoc/: AUTHORS  CMakeLists.txt  ChangeLog  Doxyfile  Makefile  Makefile (backup)  README  TODO  cmake_install.cmake  vjassdoc.dev  vjassdoc.kdevelop  vjassdoc.kdevelop.filelist  vjassdoc.kdevelop.pcs  vjassdoc.kdevses  vjassdoc.layout
vjassdoc/build files/: vjassdoc-0.2.3-1.src.rpm  vjassdoc-0.2.ebuild  vjassdoc-0.3.ebuild  vjassdoc.spec
vjassdoc/doc/: Definition der Jass++-Syntax  Jass++-Definition  Mögliche Compiler-Implementation für Jass++  Mögliche Virtuelle-Maschine-Implementation für Jass
vjassdoc/example/: src  test.j
vjassdoc/example/output/: 0.html  1.html  10.html  11.html  12.html  13.html  14.html  15.html  16.html  17.html  18.html  19.html  2.html  20.html  21.html  22.html  23.html  24.html  25.html  26.html  27.html  28.html  29.html  3.html  30.html  31.html  32.html  33.html  34.html  35.html  36.html  37.html  38.html  39.html  4.html  40.html  41.html  42.html  43.html  44.html  (+20 more)
vjassdoc/html template/: index.html
vjassdoc/kate/: CMakeLists.txt  vjassdoc.xml
vjassdoc/locale/: CMakeLists.txt
vjassdoc/releases/: vjassdoc-0.1.tar.bz2  vjassdoc-0.2.1.tar.bz2  vjassdoc-0.2.2.7z  vjassdoc-0.2.2.tar.bz2  vjassdoc-0.2.3.7z  vjassdoc-0.2.3.tar.bz2  vjassdoc-0.2.tar.bz2
vjassdoc/src/: CMakeLists.txt  Makefile  call.cpp  call.hpp  cmake_install.cmake  comment.cpp  comment.h  comment.hpp  compiler.cpp  compiler.h  compiler.hpp  doccomment.cpp  doccomment.h  doccomment.hpp  exception.cpp  exception.hpp  file.cpp  file.h  file.hpp  function.cpp  function.h  function.hpp  functioninterface.cpp  functioninterface.h  functioninterface.hpp  global.cpp  global.h  global.hpp  hook.cpp  hook.h  implementation.cpp  implementation.h  interface.cpp  interface.h  internationalisation.h  key.cpp  key.h  keyword.cpp  keyword.h  language.hpp  (+48 more)
vjassdoc/src/gui/: CMakeLists.txt  application.cpp  application.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  widget.cpp  widget.hpp  widget.ui
vjassdoc/src/jass/: comment.cpp  comment.hpp  jass.hpp
vjassdoc/templates/: cpp  h
vjassdoc/tests/: CMakeLists.txt  autocompletion.cpp
vjasstrans/: AUTHORS  CMakeLists.txt  ChangeLog  TODO
vjasstrans/example/: output.fdf  output.wts  test.j
vjasstrans/src/: CMakeLists.txt  internationalisation.hpp  main.cpp  options.cpp  options.hpp  parser.cpp  parser.h  parser.hpp  string.h  string.hpp
wc3lib/: AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  README  TODO  filemetainfo.hpp  mpqprotocol.hpp
wc3lib/doc/: Classes.txt
wc3lib/doc/lang/: Jass++-Definition  Jass++-Definition.tex  Mögliche Compiler-Implementation für Jass++  Mögliche Virtuelle-Maschine-Implementation für Jass  SimpleJass-Definition
wc3lib/doc/mdlx/: Classes.txt
wc3lib/ebuilds/: wc3lib-1.0.ebuild
wc3lib/etc/: plugins.cfg
wc3lib/lib/: CMakeLists.txt
wc3lib/lib/SFmpqapi/: CMakeLists.txt  SComp.h  SFmpq in multi-threaded applications.txt  SFmpq_static.cpp  SFmpq_static.h  SFmpqapi.cpp  SFmpqapi.def  SFmpqapi.dsp  SFmpqapi.h  SFmpqapi.odl  SFmpqapi.rc  SFmpqapi_no-lib.cpp  SFmpqapi_no-lib.h  SFmpqlib.dsp  about  license.txt  resource.h
wc3lib/lib/huffman/: CMakeLists.txt  huff.h  huffman.c
wc3lib/lib/pklib/: CMakeLists.txt  pklib.h
wc3lib/lib/qogre/: CMakeLists.txt  ExampleApplication.h  ExampleFrameListener.h  QOgreWidget.cpp  QOgreWidget.h
wc3lib/lib/readblend/: CMakeLists.txt
wc3lib/lib/warblender/: TODO  importer.py  warblender_export.py  warblender_import.py
wc3lib/lib/wave/: CMakeLists.txt
wc3lib/mime/: wtg.desktop  wts.desktop
wc3lib/src/: CMakeLists.txt  blp.hpp  editor.hpp  exception.cpp  exception.hpp  format.cpp  format.hpp  internationalisation.hpp  lang.hpp  libraryloader.cpp  libraryloader.hpp  map.hpp  mdlx.hpp  mpq.hpp  slk.hpp  utilities.cpp  utilities.hpp  vm.hpp  wc3lib.hpp
wc3lib/src/app/: CMakeLists.txt  converter.cpp  editor.cpp  jassc.cpp  jasstrans.cpp  mpq.cpp  tilesetter.cpp
wc3lib/src/blp/: CMakeLists.txt  blp.cpp  blp.hpp  blpjpeg.cpp  blpjpeg.hpp  blpuncompressed1.cpp  blpuncompressed1.hpp  blpuncompressed2.cpp  blpuncompressed2.hpp  platform.hpp
wc3lib/src/editor/: CMakeLists.txt  aieditor.cpp  aieditor.hpp  blpcodec.cpp  blpcodec.hpp  blpiohandler.cpp  blpiohandler.hpp  blpioplugin.cpp  blpioplugin.hpp  brush.cpp  brush.hpp  camerapalette.ui  campaigneditor.cpp  campaigneditor.hpp  editor.cpp  editor.hpp  importmanager.cpp  importmanager.hpp  mainwindow.py  moc_editor.cpp  modeleditor.cpp  modeleditor.hpp  modeleditor.ui  modeleditorsettings.cpp  modeleditorview.cpp  modeleditorview.hpp  modelview.cpp  modelview.hpp  module.cpp  module.hpp  modulemenu.cpp  modulemenu.hpp  mpqeditor.cpp  mpqeditor.hpp  mpqprioritylist.cpp  mpqprioritylist.hpp  mpqprotocol.cpp  mpqprotocol.hpp  newmapdialog.cpp  newmapdialog.hpp  (+33 more)
wc3lib/src/lang/: CMakeLists.txt  compiler.cpp  compiler.hpp  doccomment.cpp  doccomment.hpp  file.cpp  file.hpp  language.cpp  language.hpp  object.cpp  object.hpp  parser.cpp  parser.hpp  position.hpp  scope.hpp  sourcefile.cpp  sourcefile.hpp  syntaxerror.cpp  syntaxerror.hpp  token.cpp  token.hpp  utilities.cpp  utilities.hpp
wc3lib/src/map/: CMakeLists.txt  camera.cpp  camera.hpp  cameras.cpp  cameras.hpp  campaign.hpp  campaigninfo.cpp  campaigninfo.hpp  customunits.cpp  (+48 more)
(+1585 files in other folders)
