#add_subdirectory(de/LC_MESSAGES)
#add_subdirectory(en/LC_MESSAGES)
#add_subdirectory(mk/LC_MESSAGES)
 
#new
#gettext_create_translations(vjassdoc.pot de/LC_MESSAGES/vjassdoc.po en/LC_MESSAGES/vjassdoc.po mk/LC_MESSAGES/vjassdoc.po)

#install(FILES
#	de/LC_MESSAGES/vjassdoc.mo
#	DESTINATION
#	share/locale/vjassdoc/de/LC_MESSAGES
#)