add_subdirectory(huffman)
list(APPEND linkDirectories huffman)
add_subdirectory(pklib)
if(FLAG_EDITOR_USE)
	add_subdirectory(qogre)
	list(APPEND linkDirectories qogre)
endif()
if(FLAG_BLEND_USE)
	add_subdirectory(readblend)
	list(APPEND linkDirectories readblend)
endif()
#if(FLAG_DEBUG_USE)
	#add_subdirectory(StormLib)
	list(APPEND linkDirectories StormLib/stormlib)
	#include_directories(StormLib)
#endif()
add_subdirectory(wave)
list(APPEND linkDirectories wave)

link_directories(${linkDirectories})